--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@astrojs/node": "^8.3.3",
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.8.0",
+    // "@astrojs/vercel": "^7.8.0",
     "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.14.6",
     "showdown": "^2.1.0",
