--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.8.0",
     "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.14.6",
     "showdown": "^2.1.0",
