--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@astrojs/vercel": "^7.8.0",
     "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.15.4",
+    "jquery": "^3.7.1",
     "showdown": "^2.1.0",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.10"
   }
 }
